# ATOMAN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.bat  download.bat  gd_compile.bat  plecs_compile.bat
.metadata/: version.ini
apm32/: compile.bat  compile.sh  makefile
apm32/ldscripts/: apm32f402_403xb_flash.ld  apm32f402_403xb_flash_iap.ld
apm32/src/: apm32f402_403_int.c  apm32f402_403_int.h  main.c  main.h  syscalls.c
code/alg/: ac_loss_det.c  ac_loss_det.h  bb_mode.c  bb_ol.h  cal_rms.c  chk_grid.c  chk_grid.h  fll.c  hys_cmp.h  notch.c  notch.h  pi_tustin.c  pi_tustin.h  pid.c  pid.h  pid_inc.c  pr.c  pr.h  rly_on.c  rly_on.h  time_share.h  z2p2.h
code/app/: alarm.c  alarm.h  data_com.h  device_info.h  fault.c  fault.h  hys_cmp.c  hys_cmp.h  led.c  led.h  pwr_on.c  pwr_on.h  test.c  test.h  time_share.c  volt_mt.h  zero_player.c  zero_player.h
code/comm/: comm.c  comm.h  shell.c  shell.h
code/ctrl/: ctrl_buck.c  ctrl_buck.h  ctrl_inv.c  ctrl_inv.h  ctrl_llc.c  ctrl_llc.h  ctrl_llc_chg.c  ctrl_llc_chg.h  ctrl_llc_dsg.c  ctrl_llc_dsg.h  ctrl_pfc.c  ctrl_pfc.h  hw_params.h
code/dbg/: perf.c  perf.h  perf_service.c  perf_service.h  scope.c  scope.h  scope_service.c  scope_service.h  sfra.c  sfra.h  sfra_service.c  sfra_service.h  shell.c  shell.h  shell_service.c  shell_service.h  trace.c  trace.h  trace_service.c  trace_service.h
code/interface/: gpio.c  gpio.h  usart.c  usart.h
code/lib/: ac_loss_det.c  ac_loss_det.h  bb_mode.c  bb_mode.h  bb_ol.c  bb_ol.h  cal_rms.c  cal_rms.h  chk_grid.c  chk_grid.h  dft.c  dft.h  fll.c  fll.h  fll_i32.c  fll_i32.h  hys_cmp.c  hys_cmp.h  linear.c  linear.h  mppt.c  mppt.h  notch.c  notch.h  notch_i32.c  notch_i32.h  pi_tustin.c  pi_tustin.h  pi_tustin_i32.c  pi_tustin_i32.h  pid.c  pid.h  pid_inc.c  pid_inc.h  pll.c  pll.h  pr.c  pr.h  record_dict.c  record_dict.h  (+12 more)
code/section/: comm.c  my_math.h  perf.h  platform.h  section.c  section.h  shell.c  timing.h
docs/: AGENTS.md  BB_MODE_DESIGN.md  BB_MODE_USAGE.md  BUCK_INTEGER_CONTROL_DESIGN.md  CTRL_BB_DESIGN.md  CTRL_BB_USAGE.md  CTRL_BOOST_DESIGN.md  CTRL_BOOST_USAGE.md  CTRL_BUCK_DESIGN.md  CTRL_BUCK_USAGE.md  CTRL_DESIGN.md  CTRL_INV_DESIGN.md  CTRL_INV_USAGE.md  CTRL_PFC_DESIGN.md  CTRL_PFC_USAGE.md  CTRL_USAGE.md  C_CODING_STANDARD.md  ENGINEERING_DESIGN.md  MCU_PLATFORM_PORTING.md  PERF_DESIGN.md  PERF_USAGE.md  PLECS_BUILD_GUIDE.md  PLL_PARAMETER_TUNING.md  SCOPE_DESIGN.md  SCOPE_USAGE.md  SECTION_DESIGN.md  SECTION_USAGE.md  SFRA_DESIGN.md  SFRA_USAGE.md  SHELL_DESIGN.md  SHELL_USAGE.md  SRTOS.md  SRTOS_COMBINED_TEST_REPORT.md  SRTOS_CRITICAL_SECTION_RISK_REPORT.md  SRTOS_INTERRUPT_JITTER_REPORT.md  SRTOS_RISK_TEST_REPORT.md  SRTOS_TEST_CASES.md  SRTOS_TEST_REPORT.md  TRACE_DESIGN.md  TRACE_USAGE.md
gd32g553c/: .cproject  .project  compile.bat  compile.sh  download.bat  download.sh  fw_info.c  fw_info.h  gdlink.gdlink  makefile
gd32g553c/bsp/: bsp_can.c  bsp_gpio.c  bsp_gpio.h  bsp_init.c  bsp_timer.c  bsp_timer.h  bsp_usart.c  bsp_usart.h
gd32g553c/gcc/: Makefile  gd32g553_gcc.ld
gd32g553c/gcc_startup/: startup_gd32g5x3.s
gd32g553c/inc/: gd32g5x3_it.h  gd32g5x3_libopt.h  main.h  systick.h
gd32g553c/ldscripts/: gd32g5x3_flash.ld
gd32g553c/mdk/: gd32g553.sct  gd32g553.uvprojx  startup_gd32g5x3.s
gd32g553c/src/: gd32g5x3_it.c  main.c  readme.txt  systick.c
hc32f334/: HC32F334.SFR  download.bat  ozone.jdebug
hc32f334/ac/: download.bat
hc32f334/inc/: hc32f3xx_conf.h  main.h  systick.h
hc32f334/keil_mdk/: hc32f334_ac.uvprojx  startup_hc32f334.s
hc32f334/src/: hc32f334_it.c  syscalls.c  systick.c
hc32f558/ac/: Readme.txt
hc32f558/inc/: hc32f5xx_conf.h  main.h  systick.h
hc32f558/src/: systick.c
matlab/common/: sim_sfunc.c  sim_sfunc.h
matlab/inv/: compile.m  create_topology.m  inv_mod.slx  sim_port.h
matlab/pll/: compile.m  create_topology.m  pll_mod.slx  sim_port.h
plecs/: base.plecs  plecs.c  plecs.h
plecs/ac/: CMakeLists.txt  ac.plecs  compile.bat  plecs_log_file_path.c  plecs_port.h
plecs/ac/app/: app.c
plecs/ac/bsp/: bsp_adc.c  bsp_adc.h  bsp_gpio.h  bsp_pwm.c  bsp_pwm.h
plecs/boost/: CMakeLists.txt  boost.plecs  plecs_log_file_path.c  plecs_port.h
plecs/bsp/: bsp_gpio.c  bsp_gpio.h
plecs/buck/: CMakeLists.txt  buck.plecs  compile.bat  plecs_log_file_path.c  plecs_port.h
plecs/common/: plecs.c  plecs.h
plecs/inv/: CMakeLists.txt  inv.plecs  plecs_log_file_path.c  plecs_port.h
plecs/llc/: CMakeLists.txt  llc.plecs  plecs_log_file_path.c  plecs_port.h
plecs/pfc/: CMakeLists.txt  compile.bat  pfc.plecs  plecs_log_file_path.c
plecs/pfc_i32/: CMakeLists.txt  plecs_log_file_path.c  plecs_port.h
plecs/pfc_i32/app/: app.c  app.h
section/: section.c  section.h
tools/hc32f334/: ac_build.bat  ac_build_flash.bat  ac_com_check.bat  ac_flash.bat  ac_protocol_test.bat  ac_sfra_info.bat  ac_sfra_sweep_debug.bat  keil_env.bat  protocol_test.ps1  sfra_sweep_debug.ps1  (+2 more)
(+555 files in other folders)
